@@ -1,0 +1,7 @@
+"""
+http://www.logilab.org/ticket/70495
+http://www.logilab.org/ticket/70565
+"""
+from __future__ import absolute_import
+import string
+print string
