@@ -13,6 +13,9 @@ ChangeLog for PyLint
 
     * #60828: Fix false positive in reimport check
 
+    * #70495: absolute imports fail depending on module path (patch by Jacek Konieczny)
+
+
 2011-01-11  --  0.23.0
     * documentation update, add manpages
 
